@@ -40,6 +40,7 @@ import hudson.model.TaskListener;
 import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import jenkins.tasks.SimpleBuildStep;
 
 /**
@@ -103,7 +104,7 @@ public abstract class BuildStepCompatibilityLayer implements BuildStep {
         // delegate to getJobAction (singular) for backward compatible behavior
         Action a = getProjectAction(project);
         if (a == null)    return Collections.emptyList();
-        return Collections.singletonList(a);
+        return List.of(a);
     }
 
 
