@@ -28,6 +28,8 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.emptyString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.nullValue;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
@@ -144,7 +146,7 @@ public class FunctionsTest {
             when(j.getItemGroup()).thenReturn(j);
             createMockAncestors(req, createAncestor(view, "."), createAncestor(j, "../.."));
             TopLevelItem i = createMockItem(parent, "job/i/");
-            when(view.getItems()).thenReturn(Collections.singletonList(i));
+            when(view.getItems()).thenReturn(List.of(i));
             String result = Functions.getRelativeLinkTo(i);
             assertEquals("job/i/", result);
         }
@@ -210,7 +212,7 @@ public class FunctionsTest {
             when(parent.getItemGroup()).thenReturn(parent);
             createMockAncestors(req, createAncestor(j, "../../.."), createAncestor(parent, "../.."), createAncestor(view, "."));
             TopLevelItem i = createMockItem(parent, "job/i/", "parent/job/i/");
-            when(view.getItems()).thenReturn(Collections.singletonList(i));
+            when(view.getItems()).thenReturn(List.of(i));
             String result = Functions.getRelativeLinkTo(i);
             assertEquals("job/i/", result);
         }
@@ -638,5 +640,58 @@ public class FunctionsTest {
             }
             return this;
         }
+    }
+
+    @Test
+    public void tryGetIcon_shouldReturnNullForNull() throws Exception {
+        assertThat(Functions.tryGetIcon(null), is(nullValue()));
+    }
+
+    @Test
+    public void tryGetIcon_shouldReturnNullForSymbol() throws Exception {
+        assertThat(Functions.tryGetIcon("symbol-search"), is(nullValue()));
+    }
+
+    @Test
+    public void tryGetIcon_shouldReturnMetadataForExactSpec() throws Exception {
+        assertThat(Functions.tryGetIcon("icon-help icon-sm"), is(not(nullValue())));
+    }
+
+    @Test
+    public void tryGetIcon_shouldReturnMetadataForExtraSpec() throws Exception {
+        assertThat(Functions.tryGetIcon("icon-help icon-sm extra-class"), is(not(nullValue())));
+    }
+
+    @Test
+    public void tryGetIcon_shouldReturnMetadataForFilename() throws Exception {
+        assertThat(Functions.tryGetIcon("help.svg"), is(not(nullValue())));
+    }
+
+    @Test
+    public void tryGetIcon_shouldReturnMetadataForUrl() throws Exception {
+        assertThat(Functions.tryGetIcon("48x48/green.gif"), is(not(nullValue())));
+    }
+
+    @Test
+    public void tryGetIcon_shouldReturnNullForUnknown() throws Exception {
+        assertThat(Functions.tryGetIcon("icon-nosuchicon"), is(nullValue()));
+    }
+
+    @Test
+    public void guessIcon() throws Exception {
+        Jenkins.RESOURCE_PATH = "/static/12345678";
+        assertEquals("/jenkins/static/12345678/images/48x48/green.gif", Functions.guessIcon("jenkins/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/jenkins/static/12345678/images/48x48/green.gif", Functions.guessIcon("/jenkins/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/static/12345678/images/48x48/green.gif", Functions.guessIcon("images/48x48/green.gif", ""));
+        assertEquals("/jenkins/static/12345678/images/48x48/green.gif", Functions.guessIcon("images/48x48/green.gif", "/jenkins"));
+        assertEquals("/jenkins/static/12345678/images/48x48/green.gif", Functions.guessIcon("/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/images/static/12345678/images/48x48/green.gif", Functions.guessIcon("/images/48x48/green.gif", "/images"));
+        assertEquals("/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/plugin/myartifactId/images/48x48/green.gif", ""));
+        assertEquals("/jenkins/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/plugin/myartifactId/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/jenkins/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/jenkins/plugin/myartifactId/images/48x48/green.gif", "/jenkins"));
+        assertEquals("/plugin/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/plugin/myartifactId/images/48x48/green.gif", "/plugin"));
+        assertEquals("/plugin/static/12345678/plugin/myartifactId/images/48x48/green.gif", Functions.guessIcon("/plugin/plugin/myartifactId/images/48x48/green.gif", "/plugin"));
+        assertEquals("http://acme.com/icon.svg", Functions.guessIcon("http://acme.com/icon.svg", "/jenkins"));
+        assertEquals("https://acme.com/icon.svg", Functions.guessIcon("https://acme.com/icon.svg", "/jenkins"));
     }
 }
