@@ -40,11 +40,10 @@ import hudson.FilePath;
 import hudson.Functions;
 import java.io.File;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
-import org.apache.commons.io.FileUtils;
 import org.junit.Assume;
 import org.junit.Rule;
 import org.junit.Test;
@@ -68,7 +67,7 @@ public class FileParameterValueTest {
         FilePath root = j.jenkins.getRootPath();
 
         FreeStyleProject p = j.createFreeStyleProject();
-        p.addProperty(new ParametersDefinitionProperty(Collections.singletonList(
+        p.addProperty(new ParametersDefinitionProperty(List.of(
                 new FileParameterDefinition("../../../../../root-level.txt", null)
         )));
 
@@ -76,7 +75,7 @@ public class FileParameterValueTest {
 
         String uploadedContent = "test-content";
         File uploadedFile = tmp.newFile();
-        FileUtils.write(uploadedFile, uploadedContent, StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile.toPath(), uploadedContent, StandardCharsets.UTF_8);
 
         FreeStyleBuild build = p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue("../../../../../root-level.txt", uploadedFile, "uploaded-file.txt")
@@ -108,7 +107,7 @@ public class FileParameterValueTest {
         FilePath root = j.jenkins.getRootPath();
 
         FreeStyleProject p = j.createFreeStyleProject();
-        p.addProperty(new ParametersDefinitionProperty(Collections.singletonList(
+        p.addProperty(new ParametersDefinitionProperty(List.of(
                 new FileParameterDefinition("dir/../../../pwned", null)
         )));
 
@@ -116,7 +115,7 @@ public class FileParameterValueTest {
 
         String uploadedContent = "test-content";
         File uploadedFile = tmp.newFile();
-        FileUtils.write(uploadedFile, uploadedContent, StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile.toPath(), uploadedContent, StandardCharsets.UTF_8);
 
         FreeStyleBuild build = p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue("dir/../../../pwned", uploadedFile, "uploaded-file.txt")
@@ -135,7 +134,7 @@ public class FileParameterValueTest {
         FilePath root = j.jenkins.getRootPath();
 
         FreeStyleProject p = j.createFreeStyleProject();
-        p.addProperty(new ParametersDefinitionProperty(Collections.singletonList(
+        p.addProperty(new ParametersDefinitionProperty(List.of(
                 new FileParameterDefinition("../pwned", null)
         )));
 
@@ -143,7 +142,7 @@ public class FileParameterValueTest {
 
         String uploadedContent = "test-content";
         File uploadedFile = tmp.newFile();
-        FileUtils.write(uploadedFile, uploadedContent, StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile.toPath(), uploadedContent, StandardCharsets.UTF_8);
 
         FreeStyleBuild build = p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue("../pwned", uploadedFile, "uploaded-file.txt")
@@ -173,7 +172,7 @@ public class FileParameterValueTest {
         FilePath root = j.jenkins.getRootPath();
 
         FreeStyleProject p = j.createFreeStyleProject();
-        p.addProperty(new ParametersDefinitionProperty(Collections.singletonList(
+        p.addProperty(new ParametersDefinitionProperty(List.of(
                 new FileParameterDefinition("..\\..\\..\\..\\..\\root-level.txt", null)
         )));
 
@@ -181,7 +180,7 @@ public class FileParameterValueTest {
 
         String uploadedContent = "test-content";
         File uploadedFile = tmp.newFile();
-        FileUtils.write(uploadedFile, uploadedContent, StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile.toPath(), uploadedContent, StandardCharsets.UTF_8);
 
         FreeStyleBuild build = p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue("..\\..\\..\\..\\..\\root-level.txt", uploadedFile, "uploaded-file.txt")
@@ -204,13 +203,13 @@ public class FileParameterValueTest {
         // this case was not working even before the patch
 
         FreeStyleProject p = j.createFreeStyleProject();
-        p.addProperty(new ParametersDefinitionProperty(Collections.singletonList(
+        p.addProperty(new ParametersDefinitionProperty(List.of(
                 new FileParameterDefinition(".", null)
         )));
 
         String uploadedContent = "test-content";
         File uploadedFile = tmp.newFile();
-        FileUtils.write(uploadedFile, uploadedContent, StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile.toPath(), uploadedContent, StandardCharsets.UTF_8);
 
         FreeStyleBuild build = p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue(".", uploadedFile, "uploaded-file.txt")
@@ -232,13 +231,13 @@ public class FileParameterValueTest {
         // this case was not working even before the patch
 
         FreeStyleProject p = j.createFreeStyleProject();
-        p.addProperty(new ParametersDefinitionProperty(Collections.singletonList(
+        p.addProperty(new ParametersDefinitionProperty(List.of(
                 new FileParameterDefinition("..", null)
         )));
 
         String uploadedContent = "test-content";
         File uploadedFile = tmp.newFile();
-        FileUtils.write(uploadedFile, uploadedContent, StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile.toPath(), uploadedContent, StandardCharsets.UTF_8);
 
         FreeStyleBuild build = p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue("..", uploadedFile, "uploaded-file.txt")
@@ -262,7 +261,7 @@ public class FileParameterValueTest {
         FilePath root = j.jenkins.getRootPath();
 
         FreeStyleProject p = j.createFreeStyleProject();
-        p.addProperty(new ParametersDefinitionProperty(Collections.singletonList(
+        p.addProperty(new ParametersDefinitionProperty(List.of(
                 new FileParameterDefinition("../../../../../root-level.txt", null)
         )));
 
@@ -272,7 +271,7 @@ public class FileParameterValueTest {
 
         String uploadedContent = "test-content";
         File uploadedFile = tmp.newFile();
-        FileUtils.write(uploadedFile, uploadedContent, StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile.toPath(), uploadedContent, StandardCharsets.UTF_8);
 
         FreeStyleBuild build = p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue("../../../../../root-level.txt", uploadedFile, "uploaded-file.txt")
@@ -297,9 +296,9 @@ public class FileParameterValueTest {
         )));
 
         File uploadedFile1 = tmp.newFile();
-        FileUtils.write(uploadedFile1, "test1", StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile1.toPath(), "test1", StandardCharsets.UTF_8);
         File uploadedFile2 = tmp.newFile();
-        FileUtils.write(uploadedFile2, "test2", StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile2.toPath(), "test2", StandardCharsets.UTF_8);
 
         FreeStyleBuild build = j.assertBuildStatusSuccess(p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue("direct-child1.txt", uploadedFile1, "uploaded-file-1.txt"),
@@ -333,12 +332,12 @@ public class FileParameterValueTest {
     @Test
     public void fileParameter_canStillUse_doubleDotsInFileName() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
-        p.addProperty(new ParametersDefinitionProperty(Collections.singletonList(
+        p.addProperty(new ParametersDefinitionProperty(List.of(
                 new FileParameterDefinition("weird..name.txt", null)
         )));
 
         File uploadedFile = tmp.newFile();
-        FileUtils.write(uploadedFile, "test1", StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile.toPath(), "test1", StandardCharsets.UTF_8);
 
         FreeStyleBuild build = j.assertBuildStatusSuccess(p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue("weird..name.txt", uploadedFile, "uploaded-file.txt")
@@ -361,12 +360,12 @@ public class FileParameterValueTest {
     @Test
     public void fileParameter_canStillUse_TildeInFileName() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
-        p.addProperty(new ParametersDefinitionProperty(Collections.singletonList(
+        p.addProperty(new ParametersDefinitionProperty(List.of(
                 new FileParameterDefinition("~name", null)
         )));
 
         File uploadedFile = tmp.newFile();
-        FileUtils.write(uploadedFile, "test1", StandardCharsets.UTF_8);
+        Files.writeString(uploadedFile.toPath(), "test1", StandardCharsets.UTF_8);
 
         FreeStyleBuild build = j.assertBuildStatusSuccess(p.scheduleBuild2(0, new Cause.UserIdCause(), new ParametersAction(
                 new FileParameterValue("~name", uploadedFile, "uploaded-file.txt")
